src/test/ui/issues/issue-2XXXX/issue-22933-2.stderr
error[E0599]: no variant or associated item named `PIE` found for enum `Delicious` in the current scope
  --> $DIR/issue-22933-2.rs:4:55
   |
LL | enum Delicious {
   | -------------- variant or associated item `PIE` not found here
...
LL |     ApplePie = Delicious::Apple as isize | Delicious::PIE as isize,
   |                                                       ^^^
   |                                                       |
   |                                                       variant or associated item not found in `Delicious`
   |                                                       help: there is a variant with a similar name: `Pie`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
